--- a/packages/frontend/src/App.css
+++ b/packages/frontend/src/App.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #F0F0F3
+  background-color: #f0f0f3;
 }
 
 :root {
@@ -9,7 +9,9 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Nunito", "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Nunito', 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: background 0.2s ease-out;
