Add bonded within time column

--- a/mainnet/style.css
+++ b/mainnet/style.css
@@ -114,7 +114,8 @@ table img {
   color: #ffffff8a;
 }
 .token,
-.amount {
+.amount,
+.bondedWithin {
   font-weight: normal;
   color: #ffffffcc;
 }
