--- a/packages/frontend/src/App.css
+++ b/packages/frontend/src/App.css
@@ -10,7 +10,7 @@ body {
     'Segoe UI Symbol';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  transition: background 0.2s ease-out;
+  transition: background 0.2s ease-in;
   font-size: 1.6rem;
 }
 
